2007-03-27  John W. Eaton  <jwe@octave.org>

	* Makefile.in (DISTDIRS): Delete variable.
	(dist): Delete action for DISTDIRS.  Use ln instead of $(LN_S).

2007-03-26  David Bateman <dbateman@free.fr>

	* MatrixType.cc: Replace all uses of the method
	octave_sparse_params::get_key ("bandden") with 
	octave_sparse_params::get_bandden (void).
	(MatrixType::MatrixType (void)): Undo previous change but use
	octave_sparse_params::get_bandden (void).
	* oct-spparms.cc (get_bandden(void), do_get_bandden(void)): New
	methods.
	* oct-spparms.h (get_bandden(void), do_get_bandden(void)):
	Declare them.	
	
2007-03-26  Luis Ortiz  <lortiz@interactivesupercomputing.com>
	    David Bateman  <dbateman@free.fr>

	* idx-vector.h.cc (IDX_VEC_REP::idx_vector_rep (const Range&)):
	Check that all elements are ints before doing anything.  Simplify
	calculation of index values.

2007-03-26  David Bateman  <dbateman@free.fr>

	* Range.cc (Range::all_elements_are_ints): Improve check.

2007-03-26  John W. Eaton  <jwe@octave.org>

	* chNDArray.cc, chMatrix.cc: Also generate comparison and bool ops.
	* chNDArray.h, chMatrix.h: Provide decls.

2007-03-24  Luis Ortiz  <lortiz@interactivesupercomputing.com>

	* MatrixType.cc (MatrixType::MatrixType (void)): Initialize
	sp_bandden to zero for performance reasons as it's not used.

2007-03-23  David Bateman  <dbateman@free.fr>

	* oct-rand.cc (octave_rand::seed): Seed differently for big and
	little endian.

2007-03-15  John W. Eaton  <jwe@octave.org>

	* lo-mappers.cc (acos): Use formula similar to what we use for asin.
	From Alexander Barth <abarth@marine.usf.edu>.

2007-03-12  John W. Eaton  <jwe@octave.org>

	* oct-inttypes.h (octave_int::octave_int (double)):
	New Specialization.  Round arg.
	(operator / (const octave_int<T1>&, const octave_int<T2>&)):
	Round result before converting type.

2007-03-07  John W. Eaton  <jwe@octave.org>

	* Array.cc (assign1): Avoid resizing if there is an error.
